test/fail/error_cyclic/error_cyclic_bar.sest
require ErrorCyclicFoo

module ErrorCyclicBar = struct
  let main() = ()
end
